<resources>
    <string name="app_name">WeHearIntershipWork</string>
    //Edit text
    <string name="wh_phone_hint">Phone Number</string>

    //Textview
    <string name="wh_verification_code">Verification Code</string>
    <string name="wh_otp_sent_message">Please type the verification code sent\nto +91 </string>
    <string name="wh_resend">Resend</string>
    <string name="wh_resend_otp_in">Resend code in 0:%02d</string>

    //Button
    <string name="wh_get_otp">Get OTP</string>
    <string name="wh_verify">Verify</string>
    <string name="wh_submit">Submit</string>

    //Error Message
    <string name="wh_phone_empty_error">Please enter the phone number</string>
    <string name="wh_phone_length_error">Phone number must be of 10 digits</string>
    <string name="wh_phone_invalid_error">Please enter valid phone number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="wh_name_empty_error">Enter Name</string>
</resources>